# Aplicaciones-I-Mortalidad-en-Colombia

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
data/: codigos_muerte.xlsx  divipola.xlsx
src/: app.py  data.py  figures.py  main.py
src/config/: config.py  logger.py
