[project]
name = "mortalidad-colombia-app-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "dash>=4.1",
  "polars[excel]>=1.40.1",
  "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
  "prek>=0.3.13",
  "ruff>=0.15.12",
  "ty>=0.0.35",
]

[tool.ruff]
target-version = "py312"
line-length = 90
indent-width = 4
src = [ "src" ]
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.select = [
  "B",
  "E",
  "F",
  "I",
  "SIM",
  "UP",
]

[tool.ty]
environment.python-version = "3.12"
environment.root = [ "./src" ]
src.include = [ "src", "tests" ]
src.exclude = [ ".venv", ".ruff_cache" ]
src.respect-ignore-files = true
